feat(team): implement team endpoints
