# docs/swagger.json
@@ -17,7 +17,7 @@
     },
     "host": "localhost:8000",
     "paths": {
-        "/login": {
+        "/team": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -26,9 +26,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "用户模块"
+                    "团队模块"
                 ],
-                "summary": "账号登录",
+                "summary": "新建团队",
                 "parameters": [
                     {
                         "description": "params",
@@ -36,40 +36,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/piyo-engine_api_v1.LoginRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/piyo-engine_api_v1.LoginResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/register": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "用户模块"
-                ],
-                "summary": "用户注册",
-                "parameters": [
-                    {
-                        "description": "params",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/piyo-engine_api_v1.RegisterRequest"
+                            "$ref": "#/definitions/piyo-engine_api_v1.CreateTeamRequest"
                         }
                     }
                 ],
@@ -78,6 +45,68 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/piyo-engine_api_v1.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/team/{team_id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "团队模块"
+                ],
+                "summary": "获取团队信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Team ID",
+                        "name": "team_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/piyo-engine_api_v1.GetTeamProfileResponseData"
+                        }
+                    }
+                }
+            }
+        },
+        "/team/{team_id}/members": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "团队模块"
+                ],
+                "summary": "获取团队成员列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Team ID",
+                        "name": "team_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/piyo-engine_api_v1.GetTeamMembersResponseData"
                         }
                     }
                 }
@@ -145,9 +174,100 @@
                     }
                 }
             }
+        },
+        "/user/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "账号登录",
+                "parameters": [
+                    {
+                        "description": "params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/piyo-engine_api_v1.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/piyo-engine_api_v1.LoginResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/register": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "用户注册",
+                "parameters": [
+                    {
+                        "description": "params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/piyo-engine_api_v1.RegisterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/piyo-engine_api_v1.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "piyo-engine_api_v1.CreateTeamRequest": {
+            "type": "object",
+            "required": [
+                "name",
+                "team_id"
+            ],
+            "properties": {
+                "desc": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 3
+                },
+                "qq_group_id": {
+                    "type": "string"
+                },
+                "team_id": {
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 3
+                }
+            }
+        },
         "piyo-engine_api_v1.GetProfileResponse": {
             "type": "object",
             "properties": {
@@ -165,17 +285,50 @@
         "piyo-engine_api_v1.GetProfileResponseData": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "created_at": {
                     "type": "string"
                 },
                 "nickname": {
-                    "type": "string",
-                    "example": "alan"
+                    "type": "string"
                 },
-                "userId": {
+                "user_id": {
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "piyo-engine_api_v1.GetTeamMembersResponseData": {
+            "type": "object",
+            "properties": {
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/piyo-engine_api_v1.TeamMemberProfile"
+                    }
+                }
+            }
+        },
+        "piyo-engine_api_v1.GetTeamProfileResponseData": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "qq_group_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "team_id": {
                     "type": "string"
                 }
             }
@@ -187,17 +340,14 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string",
-                    "example": "1234@gmail.com"
+                    "type": "string"
                 },
                 "password": {
-                    "type": "string",
-                    "example": "123456"
+                    "type": "string"
                 },
                 "username": {
                     "type": "string",
-                    "maxLength": 30,
-                    "example": "foo"
+                    "maxLength": 30
                 }
             }
         },
@@ -218,7 +368,7 @@
         "piyo-engine_api_v1.LoginResponseData": {
             "type": "object",
             "properties": {
-                "accessToken": {
+                "access_token": {
                     "type": "string"
                 }
             }
@@ -232,17 +382,15 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string",
-                    "example": "1234@gmail.com"
+                    "type": "string"
                 },
                 "password": {
-                    "type": "string",
-                    "example": "123456"
+                    "type": "string"
                 },
                 "username": {
                     "type": "string",
                     "maxLength": 30,
-                    "example": "foo"
+                    "minLength": 3
                 }
             }
         },
@@ -258,16 +406,34 @@
                 }
             }
         },
+        "piyo-engine_api_v1.TeamMemberProfile": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "joined_at": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "piyo-engine_api_v1.UpdateProfileRequest": {
             "type": "object",
             "properties": {
                 "email": {
-                    "type": "string",
-                    "example": "1234@gmail.com"
+                    "type": "string"
                 },
                 "nickname": {
-                    "type": "string",
-                    "example": "alan"
+                    "type": "string"
                 }
             }
         }
