# internal/model/team.go
@@ -4,12 +4,12 @@ import "gorm.io/gorm"
 
 type Team struct {
 	gorm.Model
-	TeamID    string `gorm:"unique;not null"`
+	TeamID    string `gorm:"uniqueIndex;not null"`
 	Name      string `gorm:"not null"`
 	Status    int    `gorm:"not null"`
 	Desc      string
 	QQGroupID string
-	Users     []User `gorm:"many2many:user_team_role;"`
+	Members   []User `gorm:"many2many:user_team_role;foreignKey:TeamID;joinForeignKey:TeamID;References:UserID;joinReferences:UserID"`
 }
 
 func (m *Team) TableName() string {
